--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "webpack-dev-server": "^2.0.0-beta"
   },
   "dependencies": {
-    "ramda": "^0.21.0",
-    "rxjs": "^5.0.0-beta.6"
+    "most": "^0.19.0",
+    "most-subject": "^3.0.2",
+    "ramda": "^0.21.0"
   }
 }
