--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "elmux",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Elmux is a port of the Elm architecture to React",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --inline --entry ./src/index.js"
+    "start": "webpack-dev-server --inline --entry ./src/index.js",
+    "build": "webpack ./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -26,18 +27,18 @@
   },
   "homepage": "https://github.com/mrtnbroder/elmux#readme",
   "devDependencies": {
-    "babel-core": "^6.7.7",
+    "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "webpack": "^2.1.0-beta.6",
     "webpack-dev-server": "^2.0.0-beta"
   },
   "dependencies": {
     "ramda": "^0.21.0",
-    "rxjs": "^5.0.0-beta.6"
+    "rxjs": "^5.0.0-beta.9"
   }
 }
