--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "elmux",
   "version": "0.0.1",
   "description": "Elmux is a port of the Elm architecture to React",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --inline --entry ./src/index.js",
