--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --inline --entry ./src/index.js",
+    "start": "webpack-dev-server --inline --entry ./examples/realWorld/index.jsx",
     "build": "webpack ./src/index.js",
     "preinstall": "npm run build"
   },
