--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "elmux",
-  "version": "0.0.1",
-  "description": "Elmux is a port of the Elm architecture to React",
-  "main": "lib/index.js",
+  "version": "1.0.0",
+  "description": "Elmux brings the Elm architecture to JS",
+  "main": "lib/index",
+  "jsnext:main": "es6/index",
+  "module": "es6/index",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --inline --entry ./src/index.js",
-    "build": "webpack ./src/index.js",
-    "preinstall": "npm run build"
+    "dev": "webpack-dev-server --port 8877 --inline --entry ./src/index.js",
+    "cleanup": "rm -rf es6 lib umd",
+    "build": "npm run cleanup && npm run build-cjs && npm run build-es && npm run build-umd && npm run build-min",
+    "build-es": "BABEL_ENV=es babel ./src -d es6",
+    "build-cjs": "BABEL_ENV=cjs webpack src/index.js lib/index.js",
+    "build-umd": "NODE_ENV=development webpack src/index.js umd/elmux.js",
+    "build-min": "NODE_ENV=production webpack -p src/index.js umd/elmux.min.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +25,9 @@
     "flux",
     "pure",
     "functional",
-    "reactive"
+    "reactive",
+    "virtual dom",
+    "side effects"
   ],
   "author": "Martin Broder",
   "license": "MIT",
@@ -28,17 +36,18 @@
   },
   "homepage": "https://github.com/mrtnbroder/elmux#readme",
   "devDependencies": {
-    "babel-core": "^6.9.1",
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.13.2",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "webpack": "^2.1.0-beta.6",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-export-extensions": "^6.8.0",
+    "babel-preset-es2015": "^6.13.2",
+    "webpack": "^2.1.0-beta.21",
     "webpack-dev-server": "^2.0.0-beta"
   },
   "dependencies": {
-    "ramda": "^0.21.0",
+    "ramda": "^0.22.1",
     "rxjs": "^5.0.0-beta.9"
   }
 }
