--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "virtual dom",
     "side effects"
   ],
-  "author": "Martin Broder",
+  "author": "Martin Broder <hello@martinbroder.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/mrtnbroder/elmux/issues"
@@ -48,6 +48,6 @@
   },
   "dependencies": {
     "ramda": "^0.22.1",
-    "rxjs": "^5.0.0-beta.9"
+    "rxjs": "^5.0.0-beta.11"
   }
 }
