--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "module": "es6/index",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --port 8877 --inline --entry ./src/index.js",
     "cleanup": "rm -rf es6 lib umd",
     "build": "npm run cleanup && npm run build-cjs && npm run build-es && npm run build-umd && npm run build-min",
     "build-es": "BABEL_ENV=es babel ./src -d es6",
     "build-cjs": "BABEL_ENV=cjs webpack src/index.js lib/index.js",
     "build-umd": "NODE_ENV=development webpack src/index.js umd/elmux.js",
-    "build-min": "NODE_ENV=production webpack -p src/index.js umd/elmux.min.js"
+    "build-min": "NODE_ENV=production webpack -p src/index.js umd/elmux.min.js",
+    "examples": "node examples/server"
   },
   "repository": {
     "type": "git",
@@ -36,18 +36,23 @@
   },
   "homepage": "https://github.com/mrtnbroder/elmux#readme",
   "devDependencies": {
-    "babel-cli": "^6.14.0",
-    "babel-core": "^6.13.2",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-export-extensions": "^6.8.0",
-    "babel-preset-es2015": "^6.13.2",
-    "webpack": "^2.1.0-beta.21",
-    "webpack-dev-server": "^2.0.0-beta"
+    "babel-cli": "6.18.0",
+    "babel-core": "6.18.2",
+    "babel-eslint": "7.1.1",
+    "babel-loader": "6.2.8",
+    "babel-plugin-add-module-exports": "0.2.1",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-react": "6.16.0",
+    "babel-preset-stage-1": "6.16.0",
+    "express": "4.14.0",
+    "express-urlrewrite": "1.2.0",
+    "react": "15.4.0",
+    "react-dom": "15.4.0",
+    "webpack": "2.1.0-beta.27",
+    "webpack-dev-middleware": "1.8.4"
   },
   "dependencies": {
-    "ramda": "^0.22.1",
-    "rxjs": "^5.0.0-beta.11"
+    "ramda": "0.22.1",
+    "rxjs": "5.0.0-rc.3"
   }
 }
